Adding latest changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,18 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
 #For more logging info of spring
 logging.level.root=DEBUG
+server.port=8080
+
+#Disabeling security for accessing actuators
+#management.security.enabled=false
+
+#For actuator endpoint /8080/actuator/info
+info.app.name=Spring Actuator Example
+info.app.java.version=8
+info.app.type=Spring Boot
+
+#For exposing other endpoints in actuators
+management.endpoints.web.exposure.include=*
+
+spring.security.user.name=avinash
+spring.security.user.password=avinash
